# porypal

./: .gitignore  __init__.py  build.yml  class.puml  cli.py  config.yaml  dump_to_md.sh  how_to_run.md  main.py  main.spec  porypal.spec  porypal_dump.md  porypalette.py  pyproject.toml  readme.md  requirements.txt  setup.sh  stats.json
.github/workflows/: fetch_traffic.yml  release.yml
Porypal 2.0/palettes/: may.pal
controller/: __init__.py  automation_controller.py  example.py  palette_automation_controller.py  porypalController.py  porypal_controller.py  tileset_editor_controller.py
docs/: audit.md  how_to_run.md  testing.md  versioning.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  utils.js
frontend/src/components/: BeforeAfter.css  BeforeAfter.jsx  BgColorCell.css  BgColorCell.jsx  BgColorPicker.css  BgColorPicker.jsx  ColorSwatch.css  ColorSwatch.jsx  DropZone.css  DropZone.jsx  ExportDropdown.css  ExportDropdown.jsx  GenericFolderCard.jsx  GroupSection.css  GroupSection.jsx  HighlightableImage.css  HighlightableImage.jsx  ItemCard.css  ItemCard.jsx  LibraryDrawer.css  LibraryDrawer.jsx  LibraryItemCard.css  LibraryItemCard.jsx  Modal.css  Modal.jsx  PalettePicker.css  PalettePicker.jsx  PaletteStrip.css  PaletteStrip.jsx  PokemonCard.css  PokemonCard.jsx  PresetList.css  PresetList.jsx  ResultCard.css  (+13 more)
gui/: porypalette.ui
model/: ImageManager.py  QNotificationWidget.py  __init__.py  draggable_tile.py  image_manager.py  palette.py  paletteManager.py  palette_extractor.py  palette_manager.py  porypalMainModel.py  porypal_model.py  tile_drop_area.py  tilesetManager.py  tileset_manager.py
model/data/: oklab_weights.json
palettes/: e4.pal  may.pal
palettes/user/: sylveon.pal
presets/: gen_4_ow_sprites.json  ow_sprite.json
scripts/: bump_version.py  dump_to_md.sh  fetch_github_traffic.py  run_python.sh  setup.ps1  setup.sh  stats.json
server/: app.py  helpers.py  preset_store.py  presets.py  state.py
server/api/: __init__.py  batch.py  convert.py  eightbpp.py  extract.py  health.py  items.py  library.py  palettes.py  pipeline.py  presets.py  shiny.py  tileset.py
tests/: test_helpers.py  test_model.py  test_pipeline.py
view/: __init__.py  automation_view.py  palette_automation_view.py  palette_display.py  porypalTheme.py  porypalView.py  porypal_theme.py  porypal_view.py  porypalette.ui  tileset_editor.ui  tileset_editor_view.py  zoomable_graphics_view.py
(+23 files in other folders)
